--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,24 +1,34 @@
-# To get started with security, check out the documentation:
-# http://symfony.com/doc/current/security.html
 security:
+    encoders:
+        Symfony\Component\Security\Core\User\User: plaintext
 
-    # http://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
+    role_hierarchy:
+        ROLE_ADMIN:     ROLE_AUTHOR
+
     providers:
         in_memory:
-            memory: ~
+            memory:
+                users:
+                    admin: { password: alaska, roles: [ROLE_ADMIN] }
 
     firewalls:
-        # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-
         main:
-            anonymous: ~
-            # activate different ways to authenticate
+            pattern: ^/
+            anonymous: true
+            provider: in_memory
+            form_login:
+                login_path: login
+                check_path: login_check
+                default_target_path: /author/index_back
+            logout:
+                path: logout
+                target: /
 
-            # http://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
-            #http_basic: ~
 
-            # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
-            #form_login: ~
+
+    access_control:
+        - { path: ^/author, roles: ROLE_AUTHOR }
+
