--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,9 +4,9 @@ parameters:
     #parameter_name: value
 
 services:
-    gestion_article_dans_bdd:
-        class: AppBundle\Services\GestionArticleDansBdd
+    article_management_in_bdd:
+        class: AppBundle\Services\ArticleManagementInBdd
         arguments:
             - "@doctrine.orm.entity_manager"
-    compte_nombre_articles:
-        class: AppBundle\Services\CompteNombreArticles
+    number_of_articles:
+        class: AppBundle\Services\NumberOfArticles
