--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -22,7 +22,7 @@ security:
             form_login:
                 login_path: login
                 check_path: login_check
-                default_target_path: /auteur/
+                default_target_path: /author/
             logout:
                 path: logout
                 target: /
@@ -30,5 +30,5 @@ security:
 
 
     access_control:
-        - { path: ^/auteur, roles: ROLE_AUTHOR }
+        - { path: ^/author, roles: ROLE_AUTHOR }
 
