--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -9,7 +9,7 @@ security:
         in_memory:
             memory:
                 users:
-                    admin: { password: alaska, roles: [ROLE_ADMIN] }
+                    admin: { password: '%admin_password%', roles: [ROLE_ADMIN] }
 
     firewalls:
         dev:
