--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "description": "Projet d'études n°3 OpenClassrooms CPM-DEV: Blog pour un écrivain",
     "autoload": {
         "psr-4": {
-            "": "src/"
+            "src": "src/"
         },
         "classmap": [
             "app/AppKernel.php",
